Bug 999269 - Forwarding a message without CC header inline gets an empty "CC:" line in header table. r=jcranmer